--- a/src/app/features/private/private.component.scss
+++ b/src/app/features/private/private.component.scss
@@ -1,4 +1,4 @@
-.example-icon {
+.icon {
   padding: 0 14px;
 }
 
@@ -7,5 +7,6 @@
 }
 
 .toolbar {
-  background-color: aqua;
+  background-color: black;
+  color: white;
 }
