--- a/src/app/features/private/note/note.component.html
+++ b/src/app/features/private/note/note.component.html
@@ -1,1 +1,10 @@
-<mat-list-item>{{note.description}}</mat-list-item>
+<mat-list-item (click)="showNote(note)" class="note">
+  <p> {{note.title}} </p>
+  <p> {{note.description}}</p>
+
+  @if (note.hashCode) {
+  {{note.hashCode}}
+  } @else {
+  <p> no hashcode</p>
+  }
+</mat-list-item>
