--- a/src/app/features/private/private.component.html
+++ b/src/app/features/private/private.component.html
@@ -2,8 +2,8 @@
   <mat-toolbar-row>
     <span>My notes</span>
     <span class="example-spacer"></span>
-    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">Loved notes</mat-icon>
-    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">Add</mat-icon>
+    <mat-icon class="icon">note_add</mat-icon>
+    <mat-icon class="icon">favorite</mat-icon>
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
